--- a/components/note/src/vwc-note.scss
+++ b/components/note/src/vwc-note.scss
@@ -20,6 +20,7 @@ $border-value: 8px solid var(#{color-connotation.$vvd-color-connotation});
 	box-shadow: inset 0 1px 0 0 var(#{scheme-variables.$vvd-color-neutral-40}),
 		inset -1px 0 0 0 var(#{scheme-variables.$vvd-color-neutral-40}),
 		inset 0 -1px 0 0 var(#{scheme-variables.$vvd-color-neutral-40});
+	color: var(#{scheme-variables.$vvd-color-on-base});
 	contain: content;
 }
 
