--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -91,7 +91,7 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 	--mdc-theme-text-icon-on-background: var(#{vvd-formfield.$formfield-disabled-ink});
 	--mdc-theme-text-hint-on-background: var(#{vvd-formfield.$formfield-disabled-ink});
 
-	.mdc-list-item__text {
+	.mdc-deprecated-list-item__text {
 		color: var(#{vvd-formfield.$formfield-disabled-ink});
 	}
 }
