--- a/common/scheme/src/scheme.light.scss
+++ b/common/scheme/src/scheme.light.scss
@@ -1,6 +1,6 @@
 @use '@vonage/vvd-design-tokens/build/scss/schemes/light/main.scss';
 @use '@vonage/vvd-design-tokens/build/scss/schemes/light/alternate.scss';
-@use 'scheme-mixins';
+@use '_scheme-mixins';
 
 @include scheme-mixins.scheme-context-variables {
 	@include main.variables;
