--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -5,10 +5,6 @@
 :host {
 	@include typography.typography-cat-shorthand('caption');
 
-	.legacy-flavor {
-		display: none;
-	}
-
 	.mdc-snackbar {
 		&[position^=TOP] {
 			top: 0;
@@ -31,10 +27,15 @@
 		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
 	}
 
+	.vivid-snackbar {
+		width: 100%;
+	}
+
 	.snackbar-content {
 		display: flex;
 		flex-direction: row;
 		align-items: flex-start;
+		justify-content: space-between;
 	}
 
 	.action-container {
@@ -57,14 +58,6 @@
 }
 
 // legacy
-:host([legacy]) {
-	.modern-flavor {
-		display: none;
-	}
-	.legacy-flavor {
-		display: initial;
-	}
-}
 :host(:not([legacy])) {
 	vwc-note {
 		border: 0;
