--- a/components/toggle-button-group/src/vwc-toggle-button-group.scss
+++ b/components/toggle-button-group/src/vwc-toggle-button-group.scss
@@ -30,47 +30,36 @@ $sizes: (
 
 // TODO::remove these when viv-485 is complete
 
-::slotted(vwc-button) {
+::slotted(#{vwc-button}) {
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-focus-opacity: 0;
 }
 
 :host([accent]) {
-	::slotted(vwc-button[selected]) {
+	::slotted(#{vwc-button}[selected]) {
 		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-primary});
 		--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-primary});
 	}
 
-	::slotted(vwc-button:hover:not([selected])) {
+	::slotted(#{vwc-button}:hover:not([selected])) {
 		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
 	}
 }
 
-::slotted(vwc-button) {
-	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
-}
-
-::slotted(vwc-button[selected]) {
+::slotted(#{vwc-button}[selected]) {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
 }
 
-::slotted(vwc-button:hover:not([selected])) {
+::slotted(#{vwc-button}:hover:not([selected])) {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-40});
 }
 
-:host([disabled]) ::slotted(vwc-button),
-:host([disabled]) ::slotted(vwc-button[selected]) {
+:host([disabled]) ::slotted(#{vwc-button}),
+:host([disabled]) ::slotted(#{vwc-button}[selected]) {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-neutral-50});
-	pointer-events: none;
-}
-
-
-:host([disabled]) ::slotted(vwc-icon-button),
-:host([disabled][accent]) ::slotted(vwc-icon-button[selected]) {
-	--vvd-icon-button-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
-	--vvd-icon-button-color: var(#{scheme-variables.$vvd-color-neutral-50});
 	pointer-events: none;
 }
 // End of viv-485 removal
