--- a/components/toggle-button-group/src/vwc-toggle-button-group.scss
+++ b/components/toggle-button-group/src/vwc-toggle-button-group.scss
@@ -28,42 +28,40 @@ $sizes: (
 	display: flex;
 }
 
-::slotted([group-button]) {
+// TODO::remove these when viv-485 is complete
+
+::slotted(#{vwc-button}) {
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-focus-opacity: 0;
 }
 
-// TODO::remove these when viv-485 is complete
 :host([accent]) {
-	::slotted([group-button][selected]) {
+	::slotted(#{vwc-button}[selected]) {
 		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-primary});
 		--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-primary});
 	}
 
-	::slotted([group-button]:hover:not([selected])) {
+	::slotted(#{vwc-button}:hover:not([selected])) {
 		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
 	}
 }
 
-::slotted(vwc-button) {
-	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
-}
-
-::slotted([group-button][selected]) {
+::slotted(#{vwc-button}[selected]) {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
 }
 
-::slotted([group-button]:hover:not([selected])) {
+::slotted(#{vwc-button}:hover:not([selected])) {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-40});
 }
 
-:host([disabled]) ::slotted([group-button]) {
+:host([disabled]) ::slotted(#{vwc-button}),
+:host([disabled]) ::slotted(#{vwc-button}[selected]) {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-neutral-50});
 	pointer-events: none;
 }
-
 // End of viv-485 removal
 
 @each $scope in $scopes {
@@ -132,15 +130,16 @@ $sizes: (
 	::slotted(vwc-#{$scope}:last-child:not(:first-child)) {
 		padding-right: var(--vwc-#{$scope}-vertical-padding, 0);
 		border-radius: 0 var(#{$vvd-toggle-button-group-shape}) var(#{$vvd-toggle-button-group-shape}) 0;
-		
+
 		:host(:not([accent])) & {
 			--vvd-#{$scope}-shape: 0 var(#{$vvd-toggle-button-group-shape}) var(#{$vvd-toggle-button-group-shape}) 0;
 		}
 	}
 
-	:host([disabled]) ::slotted([group-button]) {
+	:host([disabled]) ::slotted(vwc-#{$scope}), :host([disabled][accent]) ::slotted(vwc-#{$scope}[selected]) {
 		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
 		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-neutral-50});
 		pointer-events: none;
 	}
+
 }
