not using magic strings

--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -1,8 +1,9 @@
 @use 'sass:map';
+@use 'vwc-icon-button-variables' as icon-button-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
-	$variable-name: --vvd-icon-button-shape
+	$variable-name: #{icon-button-variables.$vvd-icon-button-shape}
 );
 @use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
 	$connotations-set: primary cta success alert info announcement
@@ -14,18 +15,18 @@
 
 @include color-connotation.connotations-main;
 @include color-connotation.connotations-main-default(primary);
+
 $block-sizes: (
 	'dense': 32px,
 	'normal': 40px,
 	'enlarged': 48px
 );
 
-$vvd-icon-button-block-size: --vvd-icon-button-block-size;
 
 :host {
 
 	// sizing
-	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'normal')});
+	--mdc-icon-button-size: var(#{icon-button-variables.$vvd-icon-button-block-size}, #{map.get($block-sizes, 'normal')});
 	@include vvd-formfield.coupling;
 
 	.mdc-icon-button {
@@ -35,7 +36,7 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 		justify-content: center;
 		border: var(--vvd-icon-button-border);
 		background-color: var(--vvd-icon-button-background-color);
-		border-radius: var(--vvd-icon-button-shape);
+		border-radius: var(#{$vvd-icon-button-shape});
 		color: var(--vvd-icon-button-color);
 		&:disabled {
 			color: var(#{vvd-formfield.$formfield-disabled-ink});
@@ -61,7 +62,7 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 
 :host([dense]) {
 
-	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'dense')});
+	--mdc-icon-button-size: var(#{icon-button-variables.$vvd-icon-button-block-size}, #{map.get($block-sizes, 'dense')});
 
 	.vvd-icon {
 		--icon-size: 16px;
@@ -69,7 +70,7 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 }
 
 :host([enlarged]) {
-	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'enlarged')});
+	--mdc-icon-button-size: var(#{icon-button-variables.$vvd-icon-button-block-size}, #{map.get($block-sizes, 'enlarged')});
 
 	.vvd-icon {
 		--icon-size: 24px;
