--- a/components/textfield/src/vwc-textfield-variables.scss
+++ b/components/textfield/src/vwc-textfield-variables.scss
@@ -2,5 +2,9 @@ $horizontal-gutter: 16px;
 $icon-size: 20px;
 $icon-gutter: calc(#{$icon-size} + #{$horizontal-gutter} * 2);
 
-$vvd-text-field-size-block: --vvd-text-field-size-block;
+$vvd-textfield-size-block: --vvd-text-field-block-size;
+$vvd-textfield-shape: --vvd-textfield-shape;
 $vvd-input-selector: '.vivid-input-internal';
+
+$padding-inline-start: --padding-inline-start;
+$padding-inline-end: --padding-inline-end;
