--- a/components/textfield/src/vwc-textfield.scss
+++ b/components/textfield/src/vwc-textfield.scss
@@ -5,11 +5,11 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
-	//! may consider replacing with own component variable to prevent delegation
-	$variable-name: --mdc-shape-small
+	$variable-name: textfield-variables.$vvd-textfield-shape
 );
 
 :host {
+	--mdc-shape-small: var(#{textfield-variables.$vvd-textfield-shape});
 	--mdc-theme-error: #{vvd-formfield.$formfield-label-error-ink};
 	--mdc-text-field-fill-color: var(#{scheme-variables.$vvd-color-base});
 	--mdc-text-field-ink-color: var(#{scheme-variables.$vvd-color-on-base});
@@ -77,11 +77,11 @@
 }
 
 :host([dense]) {
-	#{textfield-variables.$vvd-text-field-size-block}: 40px;
+	#{textfield-variables.$vvd-textfield-size-block}: 40px;
 }
 
 :host(:not([dense])) {
-	#{textfield-variables.$vvd-text-field-size-block}: 48px;
+	#{textfield-variables.$vvd-textfield-size-block}: 48px;
 }
 
 :host([dense][label]:not([label=''])) {
@@ -106,10 +106,10 @@
 }
 
 .mdc-text-field {
-	height: var(#{textfield-variables.$vvd-text-field-size-block});
-	border-bottom-left-radius: var(--mdc-shape-small);
+	height: var(#{textfield-variables.$vvd-textfield-size-block});
+	border-bottom-left-radius: var(#{textfield-variables.$vvd-textfield-shape});
 	// prevent fill overflowing bottom corners
-	border-bottom-right-radius: var(--mdc-shape-small);
+	border-bottom-right-radius: var(#{textfield-variables.$vvd-textfield-shape});
 
 	.mdc-floating-label {
 		left: 14px;
@@ -224,20 +224,20 @@ vwc-notched-outline {
 }
 
 :host([outlined]) {
-	--padding-inline-start: max(
+	#{textfield-variables.$padding-inline-start}: max(
 		#{textfield-variables.$horizontal-gutter},
-		calc(var(--mdc-shape-small, 4px) + 4px)
+		calc(var(#{textfield-variables.$vvd-textfield-shape}, 4px) + 4px)
 	);
-	--padding-inline-end: max(
+	#{textfield-variables.$padding-inline-end}: max(
 		#{textfield-variables.$horizontal-gutter},
-		var(--mdc-shape-small, 4px)
+		var(#{textfield-variables.$vvd-textfield-shape}, 4px)
 	);
 }
 
 :host(:not([disabled])[icon]) {
-	--padding-inline-start: #{textfield-variables.$icon-gutter};
+	#{textfield-variables.$padding-inline-start}: #{textfield-variables.$icon-gutter};
 }
 
 :host(:not([disabled])[icontrailing]) {
-	--padding-inline-end: #{textfield-variables.$icon-gutter};
+	#{textfield-variables.$padding-inline-end}: #{textfield-variables.$icon-gutter};
 }
