--- a/components/list/src/vwc-check-list-item.scss
+++ b/components/list/src/vwc-check-list-item.scss
@@ -6,7 +6,7 @@
 	height: 40px;
 }
 
-:host(:not([left])) > .mdc-list-item__meta {
+:host(:not([left])) > .mdc-deprecated-list-item__meta {
 	width: 22px;
 	height: 22px;
 }
