--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -47,12 +47,10 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 	--mdc-theme-text-hint-on-background: var(
 		#{color-connotation.$vvd-color-on-connotation}
 	);
-	--mdc-ripple-color: var(#{color-connotation.$vvd-color-connotation});
-	--mdc-ripple-activated-opacity: 1;
+	--mdc-ripple-color: var(#{color-connotation.$vvd-color-on-connotation});
 
 	@include typography.typography-cat-shorthand('body-2-bold');
 	z-index: 0;
-
 	color: var(#{color-connotation.$vvd-color-on-connotation});
 
 	mwc-ripple,
@@ -60,9 +58,14 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 		z-index: -1;
 	}
 
+	.fake-activated-ripple {
+		--mdc-ripple-activated-opacity: 1;
+		--mdc-ripple-color: var(#{color-connotation.$vvd-color-connotation});
+	}
+
 	mwc-ripple {
-		--mdc-ripple-focus-opacity: 1;
-		--mdc-ripple-hover-opacity: 1;
+		--mdc-ripple-activated-opacity: 0;
+		background-color: var(#{color-connotation.$vvd-color-connotation});
 	}
 }
 
