--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -27,6 +27,7 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 	// sizing
 	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'normal')});
 	@include vvd-formfield.coupling;
+	font-size: 20px;
 
 	.mdc-icon-button {
 		display: inline-flex;
@@ -37,13 +38,10 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 		background-color: var(--vvd-icon-button-background-color);
 		border-radius: var(--vvd-icon-button-shape);
 		color: var(--vvd-icon-button-color);
+		font-size: inherit;
 		&:disabled {
 			color: var(#{vvd-formfield.$formfield-disabled-ink});
 		}
-	}
-
-	.vvd-icon {
-		--icon-size: 20px;
 	}
 }
 
@@ -60,20 +58,13 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 }
 
 :host([dense]) {
-
 	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'dense')});
-
-	.vvd-icon {
-		--icon-size: 16px;
-	}
+	font-size: 16px;
 }
 
 :host([enlarged]) {
 	--mdc-icon-button-size: var(#{$vvd-icon-button-block-size}, #{map.get($block-sizes, 'enlarged')});
-
-	.vvd-icon {
-		--icon-size: 24px;
-	}
+	font-size: 24px;
 }
 
 @include shape-mixins.shape(
