--- a/components/dialog/src/vwc-dialog.scss
+++ b/components/dialog/src/vwc-dialog.scss
@@ -31,7 +31,7 @@
 }
 
 .mdc-dialog__surface {
-	padding: 32px;
+	padding: 24px;
 }
 
 .mdc-dialog .mdc-dialog__content {
@@ -51,3 +51,16 @@
 	opacity: 0.32;
 }
 
+.dismiss-button {
+	display: none;
+}
+
+:host([close-button]) {
+	.dismiss-button {
+		--vvd-icon-button-color: inherit;
+		position: absolute;
+		top: 16px;
+		right: 16px;
+		display: block;
+	}
+}
