--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -1,4 +1,9 @@
+/* VARIABLES */
+$button-icon-size-variable-name: --vvd-button-icon-size;
+/*************/
+
 @forward './vwc-button-coupling';
+@use '@vonage/vwc-icon/src/vwc-icon';
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
@@ -8,12 +13,13 @@
 	$variable-name: --vvd-button-shape
 );
 
+
 @mixin size($type, $unit) {
 	:host([#{$type}]) & {
 		--button-block-size: #{$unit * 8px};
 
 		vwc-icon {
-			--icon-size: var(--vvd-button-icon-size, #{$unit * 4px});
+			#{vwc-icon.$icon-size-variable-name}: var(#{$button-icon-size-variable-name}, #{$unit * 4px});
 		}
 
 		@content;
@@ -22,6 +28,7 @@
 
 @include color-connotation.connotations-main;
 @include color-connotation.connotations-main-default(primary);
+
 
 :host {
 	--mdc-button-disabled-ink-color: var(#{vvd-formfield.$formfield-disabled-ink});
@@ -55,7 +62,7 @@
 
 	&:not(.mdc-button--dense) {
 		vwc-icon {
-			--icon-size: var(--vvd-button-icon-size, 20px);
+			#{vwc-icon.$icon-size-variable-name}: var(#{$button-icon-size-variable-name}, 20px);
 		}
 	}
 
