--- a/components/icon/src/vwc-icon.scss
+++ b/components/icon/src/vwc-icon.scss
@@ -1,30 +1,30 @@
-$size-variable-name: --icon-size;
+$icon-size-variable-name: --icon-size;
 
 :host([size='small']) {
-	#{$size-variable-name}: 16px;
+	#{$icon-size-variable-name}: 16px;
 }
 
 :host,
 :host([size='medium']) {
-	#{$size-variable-name}: 24px;
+	#{$icon-size-variable-name}: 24px;
 }
 
 :host([size='large']) {
-	#{$size-variable-name}: 32px;
+	#{$icon-size-variable-name}: 32px;
 }
 
 :host([inline]) {
-	#{$size-variable-name}: 1em;
+	#{$icon-size-variable-name}: 1em;
 	line-height: 1;
 	vertical-align: middle;
 }
 
 :host {
 	display: inline-block;
-	width: var(#{$size-variable-name});
-	height: var(#{$size-variable-name});
-	block-size: var(#{$size-variable-name});
-	inline-size: var(#{$size-variable-name});
+	width: var(#{$icon-size-variable-name});
+	height: var(#{$icon-size-variable-name});
+	block-size: var(#{$icon-size-variable-name});
+	inline-size: var(#{$icon-size-variable-name});
 	line-height: 1;
 	vertical-align: middle;
 
