--- a/components/fab/src/vwc-fab.scss
+++ b/components/fab/src/vwc-fab.scss
@@ -8,7 +8,7 @@
 	letter-spacing: initial;
 	text-transform: initial;
 
-	&--extended .vvd-icon {
+	&--extended vwc-icon {
 		margin-inline-end: 12px;
 	}
 }
