--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -2,6 +2,7 @@
 $expansion-panel-icon-size-variable-name: --vvd-expansion-panel-icon-size;
 /*************/
 
+@use '@vonage/vwc-icon/src/vwc-icon';
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
 
