--- a/components/icon-button/src/vwc-icon-button-variables.scss
+++ b/components/icon-button/src/vwc-icon-button-variables.scss
@@ -1,2 +1,3 @@
-$vvd-icon-button-shape: --vvd-icon-button-shape;
-$vvd-icon-button-block-size: --vvd-icon-button-block-size;
+$icon-button-shape: --vvd-icon-button-shape;
+$icon-button-block-size: --vvd-icon-button-block-size;
+$icon-button-icon-size-variable-name: --vvd-icon-button-icon-size;
