--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -3,7 +3,7 @@ $icon-button-icon-size-variable-name: --vvd-icon-button-icon-size;
 /*************/
 
 @use 'sass:map';
-@use '@vonage/vwc-icon/src/vwc-icon';
+@use '@vonage/vwc-icon/src/vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
@@ -81,13 +81,13 @@ $vvd-icon-button-block-size: --vvd-icon-button-block-size;
 
 vwc-icon {
 	:host & {
-		#{vwc-icon.$icon-size-variable-name}: var(#{$icon-button-icon-size-variable-name}, 20px);
+		#{icon-variables.$icon-size-variable-name}: var(#{$icon-button-icon-size-variable-name}, 20px);
 	}
 	:host([dense]) & {
-		#{vwc-icon.$icon-size-variable-name}: var(#{$icon-button-icon-size-variable-name}, 16px);
+		#{icon-variables.$icon-size-variable-name}: var(#{$icon-button-icon-size-variable-name}, 16px);
 	}
 	:host([enlarged]) & {
-		#{vwc-icon.$icon-size-variable-name}: var(#{$icon-button-icon-size-variable-name}, 24px);
+		#{icon-variables.$icon-size-variable-name}: var(#{$icon-button-icon-size-variable-name}, 24px);
 	}
 }
 
