--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -1,4 +1,7 @@
+
 @forward './vwc-button-coupling';
+@use './vwc-button-variables' as button-variables;
+@use '@vonage/vwc-icon/src/vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
@@ -8,19 +11,22 @@
 	$variable-name: --vvd-button-shape
 );
 
+
 @mixin size($type, $unit) {
 	:host([#{$type}]) & {
 		--button-block-size: #{$unit * 8px};
 
-		.vvd-icon {
-			--icon-size: #{$unit * 4px};
+		vwc-icon {
+			#{icon-variables.$icon-size-variable-name}: var(#{button-variables.$button-icon-size-variable-name}, #{$unit * 4px});
 		}
+
 		@content;
 	}
 }
 
 @include color-connotation.connotations-main;
 @include color-connotation.connotations-main-default(primary);
+
 
 :host {
 	--mdc-button-disabled-ink-color: var(#{vvd-formfield.$formfield-disabled-ink});
@@ -53,8 +59,8 @@
 	letter-spacing: normal;
 
 	&:not(.mdc-button--dense) {
-		.vvd-icon {
-			--icon-size: 20px;
+		vwc-icon {
+			#{icon-variables.$icon-size-variable-name}: var(#{button-variables.$button-icon-size-variable-name}, 20px);
 		}
 	}
 
@@ -64,13 +70,13 @@
 	}
 
 	> .trailing-icon {
-		.vvd-icon {
+		vwc-icon {
 			margin-inline-start: $gutter;
 		}
 	}
 
 	> .leading-icon {
-		.vvd-icon {
+		vwc-icon {
 			margin-inline-end: $gutter;
 		}
 	}
@@ -81,13 +87,13 @@
 		$gutter: 10px;
 
 		> .trailing-icon {
-			.vvd-icon {
+			vwc-icon {
 				margin-inline-start: $gutter;
 			}
 		}
 
 		> .leading-icon {
-			.vvd-icon {
+			vwc-icon {
 				margin-inline-end: $gutter;
 			}
 		}
