feat(vwc-accordion): viv-388 accordion (#683)
* add expansion-panel-list bare-bones

* add multi support and open close methods

* add tests

* lint fixes

* change openAll to prop

* update tests

* rename expansion-panel-list to accordion

* split accordion and expansion-panel packages

* prevent icon overriding toggle

* remove unused deps

* add indicator icon set prop

* update tests

* add leadingToggle prop

* update stories

* update padding

* update package version

* update accordion dep versions

* update dep versions

* update package version

* fix test

Co-authored-by: yinon <yinon@hotmail.com>

--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -62,18 +62,19 @@
 
 .expansion-panel-body {
 	@include typography.typography-cat-shorthand('body-2');
-	padding: 8px 16px 24px 48px;
+	padding: 8px 32px 24px 16px;
 }
 
-:host([trailingToggle]) {
+:host(:not([icon=''])),
+:host([leadingToggle]) {
 	.expansion-panel-body {
-		padding-right: 32px;
+		padding-left: 48px;
 	}
 }
 
-:host([icon=''][trailingToggle]) {
+:host([leadingToggle]) {
 	.expansion-panel-body {
-		padding-left: 16px;
+		padding-right: 16px;
 	}
 }
 
